--- a/templates/list.html
+++ b/templates/list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
+{% load book_tags %}
 {% block title %}商品列表{% endblock %}
 {% block content %}
 <div class="navbar_con">
@@ -37,6 +38,7 @@
     <div class="l_wrap fl clearfix">
         <div class="new_goods">
             <h3>新品推荐</h3>
+            {% get_new_books as new_books %}
             <ul>
                 {% for book in new_books %}
 					<li>
@@ -44,6 +46,8 @@
 						<h4><a href="{% url 'books:detail' book.id %}">{{ book.title }}</a></h4>
 						<div class="prize">￥{{ book.price }}</div>
 					</li>
+                    {% empty %}
+                    暂无书籍
                 {% endfor %}
             </ul>
         </div>
